Fix : Reduce gap between header and banner

--- a/kasa/src/index.css
+++ b/kasa/src/index.css
@@ -37,4 +37,12 @@ footer
     {
       padding: 20px 20px 0px 20px;
     }
+    #root
+    {
+      gap: 0px;
+    }
+    footer
+    {
+      margin-top: 20px;
+    }
 }
